--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello World</title>
-    </head>
-    <body>
-        <h1>Hello World! This is Jim!</h1>
-        <p1><br>Website currently under construction. :-D<br></p1>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Supawish Limprasert's Page</title>
+  </head>
+  <body>
+    <section>
+      <h1>
+        This page contains information about me (Jim), like who I am and what classes I am taking.
+        This file also have a link to another page where I hosts some of my artworks.
+        This is part of the Creative Project 1 of CSE 154.
+      </h1>
+      <p>
+        I am currently a senior at UW and I am from Thailand. Over the break, I did internship in
+        my country, watch anime, read manga, play games, and apply to jobs! ^_^
+      </p>
+    </section>
+
+    <section>
+      <h2>Classes I'm currently taking</h2>
+      <ul>
+        <li>EDC&amp;I 351</li>
+        <li>CSE 154</li>
+        <li>FISH 250</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Five of My Favorite Things</h2>
+      <ol>
+        <li><strong>Favorite color:</strong> Blue </li>
+        <li><strong>Favorite food:</strong> Pizza </li>
+        <li><strong>Favorite UW Class (so far):</strong> PSYCH 210 </li>
+        <li><strong>Favorite manga series (so far):</strong>
+          <a href="https://en.wikipedia.org/wiki/Haikyu!!" target="_blank">Haikyu!!</a></li>
+        <li><strong>Favorite drink(s):</strong>
+          <ul>
+            <li>Water</li>
+            <li>Milk</li>
+          </ul>
+        </li>
+      </ol>
+    </section>
+  </body>
 </html>
