Add some basic info about myself.

--- a/index.html
+++ b/index.html
@@ -1,46 +1,91 @@
+<!--
+  ***
+  index.html adapted from the owner's CSE 154 Creative Project 1.
+  ***
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Supawish Limprasert's Page</title>
   </head>
   <body>
     <section>
-      <h1>
-        This page contains information about me (Jim), like who I am and what classes I am taking.
-        This file also have a link to another page where I hosts some of my artworks.
-        This is part of the Creative Project 1 of CSE 154.
-      </h1>
+      <h1>Supawish Limprasert (Jim)</h1>
+      <img src="img/jim_profile_pic.JPEG"
+        alt="This is an actual picture of me smiling, full head shot."
+        class="square-pic">
       <p>
-        I am currently a senior at UW and I am from Thailand. Over the break, I did internship in
-        my country, watch anime, read manga, play games, and apply to jobs! ^_^
+        This page contains information about me (Jim), like who I am and my experiences.
+      <p>
+    </section>
+    <section>
+      <p>
+        I am currently a senior studying Computer Science at the University of Washington. I am
+        passionate about computer science, technology, and arts.
+      </p>
+    </section>
+
+    <section class="work-exp">
+      <h2>Work Experiences</h2>
+      <h3>CSE Teaching Assistant</h3>  
+      <p>Paul G. Allen School of Computer Science & Engineering</p>
+      <p>2020 - Present</p>
+      <p>
+        This is my current job. I get to help and support students learning a variety of Computer Science courses
+        and I learn something new every quarter I was a TA for.
+      </p>
+      <h3>Software Engineer Intern</h3>
+      <p>LINE MAN Wongnai</p>
+      <p>Summer 2021</p>
+      <p>
+        This is my internship in the field of Computer Science, and it broadens my mind on the framework that
+        the real industry uses (as opposed to school). I am proud of the impacts that I made here.
+      </p>
+      <h3>Math Study Center Tutor</h3>
+      <p>University of Washington</p>
+      <p>2019 - 2020</p>
+      <p>
+        This is my first job ever, but I enjoy it a lot. I get to help students with Calculus problems, sometimes
+        using visualization tools like <a href="https://www.desmos.com/">Desmos</a> to aid in explanation.
       </p>
     </section>
 
     <section>
-      <h2>Classes I'm currently taking</h2>
+      <h2>Classes I'm currently taking (Winter 2022)</h2>
       <ul>
-        <li>EDC&amp;I 351</li>
-        <li>CSE 154</li>
-        <li>FISH 250</li>
+        <li>CSE 451</li>
+        <li>CSE 478</li>
+        <li>ENGL 388</li>
       </ul>
     </section>
 
     <section>
-      <h2>Five of My Favorite Things</h2>
-      <ol>
-        <li><strong>Favorite color:</strong> Blue </li>
-        <li><strong>Favorite food:</strong> Pizza </li>
-        <li><strong>Favorite UW Class (so far):</strong> PSYCH 210 </li>
-        <li><strong>Favorite manga series (so far):</strong>
-          <a href="https://en.wikipedia.org/wiki/Haikyu!!" target="_blank">Haikyu!!</a></li>
-        <li><strong>Favorite drink(s):</strong>
-          <ul>
-            <li>Water</li>
-            <li>Milk</li>
-          </ul>
-        </li>
-      </ol>
+      <h2>My Artwork</h2>
+      <p>
+        You can go to this <a href="creative-pursuits.html" target="_blank">page</a> to see
+        some of my art work! :-D
+      </p>
     </section>
+
+    <footer>
+        <p>Here lies my contact information.</p>
+  
+        <!--
+          Using some sample code from
+          https://developer.mozilla.org/en-US/docs/Web/HTML/Element/address
+          as guidance on the contact information.
+        -->
+        <address>
+          <p>You can reach me via:</p>
+          <ul>
+            <li><a href="mailto:jimsupawish@gmail.com" target="_blank">my personal email</a></li>
+            <li><a href="https://www.facebook.com/superwish.limprasert/" target="_blank">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/supawish-limprasert/" target="_blank">LinkedIn</a></li>
+          </ul>
+        </address>
+      </footer>
   </body>
 </html>
